--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>More about this website.</p>
+<p>More about this websiteaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.</p>
 
 
 
